REFACTOR: Comment Domain Reconstruct